--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "multer": "^1.4.2",
-    "serverless-http": "^2.7.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "start": "nodemon script.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VVJS-22/express-api.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/VVJS-22/express-api/issues"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
+  }
 }
